k8s/core/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kguard-deployment
  namespace: k-guard
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: k-guard
  template:
    metadata:
      labels:
        app: k-guard
    spec:
      terminationGracePeriodSeconds: 60
      serviceAccountName: k-guard-sa
      automountServiceAccountToken: true
      imagePullSecrets:
        - name: ghcr-secret
      securityContext:
        fsGroup: 1000
        supplementalGroups: [988]
      volumes:
        - name: docker-socket
          hostPath:
            path: /var/run/docker.sock
            type: Socket
        - name: temp-storage
          emptyDir:
            sizeLimit: 500Mi
        - name: db-storage
          hostPath:
            path: /var/lib/kguard/db
            type: DirectoryOrCreate
        - name: wazuh-api-ca
          secret:
            secretName: wazuh-api-ca
            items:
              - key: ca.pem
                path: ca.pem
        - name: wazuh-indexer-ca
          secret:
            secretName: wazuh-indexer-certs
            items:
              - key: root-ca.pem
                path: root-ca.pem
      containers:
        - name: kguard-app
          image: ghcr.io/kamouloxpelvis/kguard-app:v1.5.0
          imagePullPolicy: Always
          securityContext:
            runAsUser: 1000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
              add: ["NET_ADMIN", "NET_RAW"]
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 45
          volumeMounts:
            - name: docker-socket
              mountPath: /var/run/docker.sock
            - name: temp-storage
              mountPath: /tmp
            - name: db-storage
              mountPath: /app/data
            - name: wazuh-api-ca
              mountPath: /etc/kguard/wazuh-api-ca
              readOnly: true
            - name: wazuh-indexer-ca
              mountPath: /etc/kguard/wazuh-indexer-ca
              readOnly: true
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
              ephemeral-storage: "500Mi"
            limits:
              cpu: 1500m
              memory: 2Gi
              ephemeral-storage: "2Gi"
