k8s/core/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k-guard-service
  namespace: k-guard
spec:
  selector:
    app: k-guard
  ports:
    - name: api
      port: 8000
      targetPort: 8000
