k8s/core/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k-guard-ingress
  namespace: k-guard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - k-guard.devopsnotes.org
    - app.devopsnotes.org
    secretName: kguard-tls
  rules:
  - host: k-guard.devopsnotes.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k-guard-service
            port:
              number: 8000
  - host: app.devopsnotes.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k-guard-service
            port:
              number: 8000
